# serializer version: 1
# name: test_finalize[mongo]
  dict({
    '_id': '7cf872dc',
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'deleted': False,
    'file': dict({
      'id': 1,
      'name': 'malus.fa.gz',
    }),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'space': dict({
      'id': 0,
    }),
    'upload': 1,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_finalize[obj]
  dict({
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'file': dict({
      'id': 1,
      'name': 'malus.fa.gz',
    }),
    'files': list([
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.1.bt2',
        'id': 1,
        'name': 'subtraction.1.bt2',
        'size': 44026551,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.2.bt2',
        'id': 2,
        'name': 'subtraction.2.bt2',
        'size': 29870392,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.rev.2.bt2',
        'id': 3,
        'name': 'subtraction.rev.2.bt2',
        'size': 29870392,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.rev.1.bt2',
        'id': 4,
        'name': 'subtraction.rev.1.bt2',
        'size': 44026551,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.4.bt2',
        'id': 5,
        'name': 'subtraction.4.bt2',
        'size': 29870386,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.3.bt2',
        'id': 6,
        'name': 'subtraction.3.bt2',
        'size': 3257,
        'subtraction': '7cf872dc',
        'type': 'bowtie2',
      }),
      dict({
        'download_url': 'https://virtool.example.com/api/subtractions/7cf872dc/files/subtraction.fa.gz',
        'id': 7,
        'name': 'subtraction.fa.gz',
        'size': 36461731,
        'subtraction': '7cf872dc',
        'type': 'fasta',
      }),
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_datetime',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
